# rust-crud-api

./: Cargo.toml  README.md
migrations/2020-08-15-212211_create_heroes/: up.sql
migrations/2020-08-17-014642_create_users/: up.sql
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  schema.rs
src/models/: hero.rs  mod.rs  user.rs
src/routes/: hero.rs
