[package]
name = "rust_crud_api"
version = "0.1.0"
authors = ["Den4200 <dennis@dennispham.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
chrono = "0.4"
validator = "0.10"
validator_derive = "0.10"
rust-crypto = "0.2.36"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_sqlite_pool"]
